[package]
name = "ssf_rust"
version = "0.1.0"
authors = ["Peter Kuchar <peter.kuchar@konicaminolta.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.117", features = ["derive"] }
toml = "0.5.7"
dirs = "3.0.1"
reqwest = { version = "0.10", features = ["json", "blocking"] }
error-chain = { version = "*" }
serde_json = { version = "*" }
cursive = { version = "0.15.0" }
itertools = { version = "0.9.0" }
rexpect = "0.4"
regex = "1"
